--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <video
             id="music"
             src="http://gn.sycdn.kuwo.cn/e3cc202cc6a16267ad70a1376fc54494/61878f01/resource/n1/67/21/1256704021.mp3"
+            style="height: 0px"
         ></video>
         <script type="module" src="/src/main.tsx"></script>
     </body>
